<?xml version="1.0"?>
<package format="2">
  <name>my_ros_service</name>
  <version>0.0.0</version>
  <description>The my_ros_service package</description>
  <maintainer email="matt@todo.todo">matt</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>example_ros_service</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <export>
  </export>
</package>
